syntax = "proto3";

package api.v1;
option go_package = "/api/v1";

message TestRequest {
  int32 waitSec =1;
  bool requestDB =2;

}

message TestResponse {}

service APIV1Service {
  rpc Test(TestRequest) returns (TestResponse);
}
